--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
+    "firebase": "^8.4.1",
+    "jwt-decode": "^3.1.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^10.16.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
