--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^10.16.3",
+    "swiper": "^6.5.7",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
