--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.1",
     "sweetalert2": "^10.16.3",
     "swiper": "^6.5.7",
     "web-vitals": "^1.1.1"
