--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.4.1",
     "firebase": "^8.4.1",
     "jwt-decode": "^3.1.2",
+    "leva": "^0.9.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.0",
